--- a/asteroids-processing/.classpath
+++ b/asteroids-processing/.classpath
@@ -2,11 +2,6 @@
 <classpath>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="lib" path="lib/core.jar">
-		<attributes>
-			<attribute name="javadoc_location" value="https://processing.github.io/processing-javadocs/core/"/>
-		</attributes>
-	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/5"/>
 	<classpathentry kind="lib" path="lib/renderer/gluegen-rt-natives-linux-amd64.jar"/>
 	<classpathentry kind="lib" path="lib/renderer/gluegen-rt-natives-linux-i586.jar"/>
@@ -20,5 +15,6 @@
 	<classpathentry kind="lib" path="lib/renderer/jogl-all-natives-windows-amd64.jar"/>
 	<classpathentry kind="lib" path="lib/renderer/jogl-all-natives-windows-i586.jar"/>
 	<classpathentry kind="lib" path="lib/renderer/jogl-all.jar"/>
+	<classpathentry kind="lib" path="lib/core.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
